--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@
             src="images/popipa/character/ushigomeRimi.png"
             alt="Ushigome Rimi"
           />
-          <p>
-            Ushigome Rimi <br />
-            CV. Nishimoto Rimi
-          </p></a
+          <p>Ushigome Rimi <br />CV. Nishimoto Rimi</p></a
         >
         <a href="pages/popipa/character/yamabukiSaya.html"
           ><img
@@ -317,7 +314,7 @@
           <p>LOCK<br />CV. Kohara Riko</p></a
         >
       </div>
-      <footer>
+      <footer class="home">
         <div class="japan">
           <h4>Japan</h4>
           <a
